# haunted-manager

./: .gitignore  README.md
server/: .dockerignore  .env.dev  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  setup.cfg
server/.run/: Dockerfile.run.xml  pytest.run.xml
server/fixtures/: data.json  gameflows.json  levels.json  tags.json
server/ghost_sharing/: admin.py  apps.py  models.py  urls.py  views.py
server/ghost_sharing/fixtures/: gameflows.json  levels.json
server/ghost_sharing/migrations/: 0001_initial.py  0002_gameflow_level_ghost_level_new.py  0003_remove_ghost_level_new_alter_ghost_level.py
server/ghost_sharing/tests/: test_verification.py
server/haunted_auth/: admin.py  apps.py  email.py  models.py  urls.py  views.py
server/haunted_auth/migrations/: 0001_initial.py  0002_alter_apikey_options.py  0002_alter_apikey_owner.py  0003_alter_apikey_options.py  0003_alter_apikey_owner.py
server/haunted_auth/templates/: email_confirmation_body.html.j2  email_confirmation_body.txt.j2
server/haunted_auth/tests/: test_login.py  test_logout.py  test_profile.py  test_regenerate_token.py  test_user_registration.py
server/haunted_sessions/: admin.py  apps.py  models.py  urls.py  views.py
server/haunted_sessions/migrations/: 0001_initial.py  0002_session_description_alter_tag_description_and_more.py  0002_session_players.py  0003_alter_session_options_alter_tag_options.py  0003_alter_session_owner.py  0004_session_end_session_is_event_session_start.py  0005_alter_session_options.py  0006_remove_session_is_event.py  0007_session_private.py  (+1 more)
server/hauntedserver/: asgi.py  email.py  jinja2.py  settings.py  urls.py  views.py  wsgi.py
server/hsutils/: __init__.py  auth.py  error.py  json_response.py  minio.py  openapi.json  rest_helper.py  test_utils.py  validated_response.py  viewmodels.py
server/siteapi/: admin.py  apps.py  models.py  urls.py  views.py
server/spec/: endpoints.py  generator_django.py  generator_vue.py  genspec.py  openapi.py  structural.py
(+131 files in other folders)
