[tool.poetry]
name = "haunted-server"
version = "0.1.0"
description = "CroftEngine Ghost Session Management Server"
authors = ["Steffen Ohrendorf <steffen.ohrendorf@gmx.de>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
Django = "*"
Jinja2 = "*"
django-cors-headers = "*"
dataclasses-json = "*"
pyhumps = "*"
PyYAML = "*"
django-email-verification = "*"
psycopg2 = "*"
mysqlclient = "*"
django-environ = "*"
gunicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
pytest-django = "*"
requests = "*"
mypy = "*"
pytest-mypy = "*"
types-requests = "*"
django-stubs = "*"

flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target_version = ["py38"]
line-length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "hauntedserver.settings"
